# soauth

./: README.md  pyproject.toml
soauth/: __main__.py  application_flow.py  background_server.py  console.py  const.py  flows.py
soauth/templates/: base.html  callback.html  collect_secrets_and_scopes.html  index.html
