[tool.poetry]
name = "soauth"
version = "0.1.0"
description = "A set of development workflows for easy acquisition of OAuth2 tokens"
authors = ["Piotr Kilczuk <piotr@kilczuk.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
nuitka = "^2.6.8"
werkzeug = "^3.1.3"
requests = "^2.32.3"
jinja2 = "^3.1.6"
wtforms = "^3.2.1"

[tool.poetry.scripts]
soauth = "soauth.console:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
